--- a/进程间的五种通信方式介绍.md
+++ b/进程间的五种通信方式介绍.md
@@ -29,7 +29,7 @@ int pipe(int fd[2]);  // 返回值：若成功返回0，失败返回-1；
 
 要关闭管道只需将这两个文件描述符关闭即可。
 
-#### **3、For Example**
+#### 3、For Example
 
 单个进程中的管道几乎没有任何用处。所以，通常调用 pipe 的进程接着调用 fork，这样就创建了父进程与子进程之间的 IPC 通道。如下图所示：
 
@@ -85,12 +85,12 @@ Hello World
 
 FIFO，也称为命名管道，是一种文件类型。
 
-### **1、特点**
+#### 1、特点
 
 1. FIFO可以在无关的进程之间交换数据，与无名管道不同。
 2. FIFO有路径名与之相关联，它以一种特殊设备文件形式存在于文件系统中。
 
-### **2、原型**
+#### 2、原型
 
 ```c
 #include <stdio.h>
@@ -103,7 +103,7 @@ int mkfifo(const char* pathname, mode_t mode);
 - 若没有指定O_NONBLOCK（默认），只读 open 要阻塞到某个其他进程为写而打开此 FIFO。类似的，只写 open 要阻塞到某个其他进程为读而打开它。
 - 若指定了O_NONBLOCK，则只读 open 立即返回。而只写 open 将出错返回 -1 如果没有进程已经为读而打开该 FIFO，其errno置ENXIO。
 
-### 3、For Example
+#### 3、For Example
 
 FIFO的通信方式类似于在进程中使用文件来传输数据，只不过FIFO类型文件同时具有管道的特性。在数据读出时，FIFO管道中同时清除数据，并且“先进先出”。下面的例子演示了使用 FIFO 进行 IPC 的过程：
 
@@ -236,17 +236,17 @@ Send message: Process 4893's time is Tue Oct 24 18:46:43 2023
 
 
 
-### **三、消息队列**
+### 三、消息队列
 
 消息队列，是消息的链接表，存放在内核中。一个消息队列由一个标识符（即队列ID）来标识。
 
-#### **1、特点**
+#### 1、特点
 
 1. 消息队列是面向记录的，其中的消息具有特定的格式以及特定的优先级。
 2. 消息队列独立于发送与接收进程。进程终止时，消息队列及其内容并不会被删除。
 3. 消息队列可以实现消息的随机查询,消息不一定要以先进先出的次序读取,也可以按消息的类型读取。
 
-#### **2、原型**
+#### 2、原型
 
 ```c
 #include <stdio.h>
@@ -273,7 +273,7 @@ int msgctl(int msqid, int cmd, struct msqid_ds * buf);
 
 可以看出，type值非 0 时用于以非先进先出次序读消息。也可以把 type 看做优先级的权值。（其他的参数解释，请自行Google之）
 
-#### **3、For Example**
+#### 3、For Example
 
 下面写了一个简单的使用消息队列进行IPC的例子，服务端程序一直在等待特定类型的消息，当收到该类型的消息以后，发送另一种特定类型的消息作为反馈，客户端读取该反馈并打印出来。
 
@@ -455,18 +455,18 @@ Server: receive msg.mtype is: 888.
 
 
 
-###  **四、信号量**
+###  四、信号量
 
 信号量（semaphore）与已经介绍过的 IPC 结构不同，它是一个计数器。信号量用于实现进程间的互斥与同步，而不是用于存储进程间通信数据。
 
-#### **1、特点**
+#### 1、特点
 
 1. 信号量用于进程间同步，若要在进程间传递数据需要结合共享内存。
 2. 信号量基于操作系统的 PV 操作，程序对信号量的操作都是原子操作。
 3. 每次对信号量的 PV 操作不仅限于对信号量值加 1 或减 1，而且可以加减任意正整数。
 4. 支持信号量组。
 
-### **2、原型**
+### 2、原型
 
 最简单的信号量是只能取 0 和 1 的变量，这也是信号量最常见的一种形式，叫做二值信号量（Binary Semaphore）。而可以取多个正整数的信号量被称为通用信号量。Linux 下的信号量函数都是在通用的信号量数组上进行操作，而不是在一个单一的二值信号量上进行操作。
 
@@ -655,17 +655,17 @@ Process father: pid=5072
 
 
 
-### **五、共享内存**
+### 五、共享内存
 
 共享内存（Shared Memory），指两个或多个进程共享一个给定的存储区。
 
-####  **1、特点**
+####  1、特点
 
 1. 共享内存是最快的一种 IPC，因为进程是直接对内存进行存取。
 2. 因为多个进程可以同时操作，所以需要进行同步。
 3. 信号量+共享内存通常结合在一起使用，信号量用来同步对共享内存的访问。
 
-#### **2、原型**
+#### 2、原型
 
 ```c
 #include <stdio.h>
@@ -681,7 +681,7 @@ int shmctl(int shm_id, int cmd, struct shmid_ds *buf);
 
 当用shmget函数创建一段共享内存时，必须指定其size；而如果引用一个已存在的共享内存，则将size指定为0 。当一段共享内存被创建以后，它并不能被任何进程访问。必须使用shmat函数连接该共享内存到当前进程的地址空间，连接成功后把共享内存区对象映射到调用进程的地址空间，随后可像本地空间一样访问。shmdt函数是用来断开shmat建立的连接的。注意，这并不是从系统中删除该共享内存，只是当前进程不能再访问该共享内存而已。shmctl函数可以对共享内存执行多种操作，根据参数 cmd 执行相应的操作。常用的是IPC_RMID（从系统中删除该共享内存）。
 
-#### **3、For Example**
+#### 3、For Example
 
 下面这个例子，使用了【共享内存+信号量+消息队列】的组合来实现服务器进程与客户进程间的通信。
 
@@ -1013,7 +1013,7 @@ syc@ubuntu:~$
 while((c=getchar())!='\n' && c!=EOF);
 ```
 
-##  **五种通讯方式总结**
+##  五种通讯方式总结
 
 1.管道：速度慢，容量有限，只有父子进程能通讯
 
