--- a/进程间的五种通信方式介绍.md
+++ b/进程间的五种通信方式介绍.md
@@ -4,7 +4,7 @@
 
 > 进程间通信（IPC，InterProcess Communication）是指在不同进程之间传播或交换信息。IPC的方式通常有管道（包括无名管道和命名管道）、消息队列、信号量、共享内存、Socket（套接字）等。其中 Socket和支持不同主机上的两个进程IPC。
 
-
+[参考文章](https://zhuanlan.zhihu.com/p/612414331)
 
 ###  一、管道
 
